2001-03-02  Alex Graveley  <alex@ximian.com>

	* tests/stress-test.c (main): exit nicely if no test URL is supplied.

	* tests/simple-test.c (main): use http://www.ximian.com is no test
	URL is supplied.

	* tests/Makefile.am (INCLUDES): include glib headers.

	* src/soup-wsdl/Makefile.am (INCLUDES): include glib, popt, and
	libxml headers.
	(soup_wsdl_LDADD): explicitly add glib, popt, libxml deps.

	* src/soup-core/Makefile.am (INCLUDES): include gnet, libxml,
	openssl, and nss headers.
	(libsoup_la_LIBADD): explicitly add gnet, libxml deps.
	(soup_ssl_proxy_LDADD): explicitly add glib, nss and openssl deps.

	* soup.spec.in: remove OpenSSL advertising clause.

	* soupConf.sh.in: list out dependencies (gnet, libxml).

	* soup.pc.in: list out dependencies (gnet, libxml).

	* soup-config.in: list out dependencies (gnet, libxml).

	* configure.in: Cleanups to remove unnecessary dependencies.

2001-02-28  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-ssl.c (soup_ssl_idle_waitpid): glib idle
	callback which calls waitpid (nonblockingously) on all the
	soup-ssl-proxy children to make sure their resources are freed.
	(soup_ssl_get_iochannel): execute soup-ssl-proxy, setting up STDIN
	and STDOUT to point to the fd we will return a GIOChannel for,
	also passing the security policy and the destination socket fd
	number in the environments SECURITY_POLICY and SOCKFD,
	respectively.

	* src/soup-core/soup-ssl-proxy.c: Created. This is a small SSL
	proxy executable, licensed GPL, which allows us to use OpenSSL and
	NSS without requiring applications which link with libsoup to have
	to comply with the licenses of those SSL libraries.

	* src/soup-core/soup-server.c (soup_server_register): add handler
	to list.

	* src/soup-core/soup-queue.c (soup_queue_write_async): ignore
	SIGPIPE and handle errno.

	* src/soup-core/soup-misc.c (soup_set_security_policy): move from
	soup-ssl.c.
	(soup_get_security_policy): add.
